--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "nodemon server.js",
     "start": "node server.js"
   },
-  "author": "",
+  "author": "Teddy Randby",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
